CDAC_CPP_PRACTICE/DAY_8/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:08:09 **** Incremental Build of configuration Debug for project multifile_virtual demo ****
make all 
Building file: ../src/main.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cpp"
../src/main.cpp: In function ‘int main()’:
../src/main.cpp:74:11: warning: deleting object of polymorphic class type ‘Shape’ which has non-virtual destructor might cause undefined behavior [-Wdelete-non-virtual-dtor]
    delete ptr;
           ^~~
Finished building: ../src/main.cpp
 
Building file: ../src/multifile_virtual demo.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/multifile_virtual demo.d" -MT"src/multifile_virtual\ demo.d" -o "src/multifile_virtual demo.o" "../src/multifile_virtual demo.cpp"
../src/multifile_virtual demo.cpp:17:2: error: ‘virtual’ outside class declaration
  virtual void Shape::calculateArea( void )
  ^~~~~~~
../src/multifile_virtual demo.cpp:30:7: error: ‘Reactangle’ has not been declared
  void Reactangle::SetLength(float length)
       ^~~~~~~~~~
../src/multifile_virtual demo.cpp: In function ‘void SetLength(float)’:
../src/multifile_virtual demo.cpp:32:3: error: invalid use of ‘this’ in non-member function
   this->length=length;
   ^~~~
../src/multifile_virtual demo.cpp: At global scope:
../src/multifile_virtual demo.cpp:35:7: error: ‘Reactangle’ has not been declared
  void Reactangle::SetBreadth(float breadth)
       ^~~~~~~~~~
../src/multifile_virtual demo.cpp: In function ‘void SetBreadth(float)’:
../src/multifile_virtual demo.cpp:37:3: error: invalid use of ‘this’ in non-member function
   this->breadth=breadth;
   ^~~~
../src/multifile_virtual demo.cpp: At global scope:
../src/multifile_virtual demo.cpp:40:7: error: ‘Reactangle’ has not been declared
  void Reactangle::calculateArea( void )
       ^~~~~~~~~~
../src/multifile_virtual demo.cpp: In function ‘void calculateArea()’:
../src/multifile_virtual demo.cpp:42:4: error: invalid use of ‘this’ in non-member function
    this->area = this->length * this->breadth;
    ^~~~
../src/multifile_virtual demo.cpp:42:17: error: invalid use of ‘this’ in non-member function
    this->area = this->length * this->breadth;
                 ^~~~
../src/multifile_virtual demo.cpp:42:32: error: invalid use of ‘this’ in non-member function
    this->area = this->length * this->breadth;
                                ^~~~
../src/multifile_virtual demo.cpp: At global scope:
../src/multifile_virtual demo.cpp:48:7: error: ‘Cricle’ has not been declared
  void Cricle::SetRadius(float radius)
       ^~~~~~
../src/multifile_virtual demo.cpp: In function ‘void SetRadius(float)’:
../src/multifile_virtual demo.cpp:50:3: error: invalid use of ‘this’ in non-member function
   this->radius=radius;
   ^~~~
make: *** [src/multifile_virtual demo.o] Error 1
src/subdir.mk:28: recipe for target 'src/multifile_virtual demo.o' failed
23:08:43 **** Incremental Build of configuration Debug for project multifile_virtual demo ****
make all 
Building file: ../src/multifile_virtual demo.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/multifile_virtual demo.d" -MT"src/multifile_virtual\ demo.d" -o "src/multifile_virtual demo.o" "../src/multifile_virtual demo.cpp"
../src/multifile_virtual demo.cpp:17:2: error: ‘virtual’ outside class declaration
  virtual void Shape::calculateArea( void )
  ^~~~~~~
../src/multifile_virtual demo.cpp:48:7: error: ‘Cricle’ has not been declared
  void Cricle::SetRadius(float radius)
       ^~~~~~
../src/multifile_virtual demo.cpp: In function ‘void SetRadius(float)’:
../src/multifile_virtual demo.cpp:50:3: error: invalid use of ‘this’ in non-member function
   this->radius=radius;
   ^~~~
src/subdir.mk:28: recipe for target 'src/multifile_virtual demo.o' failed
make: *** [src/multifile_virtual demo.o] Error 1
23:09:27 **** Incremental Build of configuration Debug for project multifile_virtual demo ****
make all 
Building file: ../src/multifile_virtual demo.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/multifile_virtual demo.d" -MT"src/multifile_virtual\ demo.d" -o "src/multifile_virtual demo.o" "../src/multifile_virtual demo.cpp"
../src/multifile_virtual demo.cpp:48:7: error: ‘Cricle’ has not been declared
  void Cricle::SetRadius(float radius)
       ^~~~~~
../src/multifile_virtual demo.cpp: In function ‘void SetRadius(float)’:
../src/multifile_virtual demo.cpp:50:3: error: invalid use of ‘this’ in non-member function
   this->radius=radius;
   ^~~~
make: *** [src/multifile_virtual demo.o] Error 1
src/subdir.mk:28: recipe for target 'src/multifile_virtual demo.o' failed
23:09:41 **** Incremental Build of configuration Debug for project multifile_virtual demo ****
make all 
Building file: ../src/multifile_virtual demo.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/multifile_virtual demo.d" -MT"src/multifile_virtual\ demo.d" -o "src/multifile_virtual demo.o" "../src/multifile_virtual demo.cpp"
Finished building: ../src/multifile_virtual demo.cpp
 
Building target: multifile_virtual demo
Invoking: GCC C++ Linker
g++  -o "multifile_virtual demo"  ./src/main.o ./src/multifile_virtual\ demo.o   
Finished building target: multifile_virtual demo
 
23:10:00 **** Incremental Build of configuration Debug for project multifile_virtual demo ****
make all 
make: Nothing to be done for 'all'.
23:10:02 **** Incremental Build of configuration Debug for project multifile_virtual demo ****
make all 
make: Nothing to be done for 'all'.
